[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["torch-backend"]
torch-backend = ["burn-tch"]
wgpu-backend = ["burn-wgpu"]

[dependencies.burn-tch]
package = "burn-tch"
git = "https://github.com/burn-rs/burn.git"
optional = true

[dependencies.burn-wgpu]
package = "burn-wgpu"
git = "https://github.com/burn-rs/burn.git"
optional = true

[dependencies]
burn = { git = "https://github.com/burn-rs/burn.git" }
serde = { version = "1.0.189", features = ["derive", "std"] }
num-traits = "0.2.15"
hound = "3.5.0"
tokenizers = { version = "0.13.3", default-features = false, features = [
  "onig",
  "http",
] }
npy = "0.4.0"
cfg-if = "0.1"
strum = "0.25.0"
strum_macros = "0.25.0"
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["v4"] }

axum = { version = "0.6.20", features = [
  "multipart",
  "headers",
  "http2",
  "ws",
  "tracing",
] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
flate2 = "1.0.28"
hyper = "0.14.27"
hyper-staticfile = "0.9.5"
log = "0.4.20"
mime_guess = "2.0.4"
serde_json = "1.0.107"
tar = "0.4.40"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = [
  "io",
  "net",
  "rt",
  "time",
  "tracing",
  "futures-io",
  "io-util",
  "compat",
  "full",
] }
