[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", features = ["io", "channel", "tokio-io"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"

serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
traceback-error = "0.1.9"
traceback-derive = "0.1.1"

common = { path = "../common" }
