[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.38"
dashmap = "5.5.3"
dotenv = "0.15.0"
hex = "0.4.3"
poise = { version = "0.6.1" }
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
# serenity = "0.12.0"
songbird = { version = "0.4.1", features = ["receive"] }
surrealdb = "1.1.1"
symphonia = { version = "0.5.3", features = ["all"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
youtube_dl = { version = "0.9.0", features = ["tokio", "reqwest"] }
