[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.38"
dashmap = "5.5.3"
dotenv = "0.15.0"
futures = "0.3.30"
hex = "0.4.3"
poise = { version = "0.6.1" }
rand = "0.8.5"
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
songbird = { version = "0.4.1", features = ["receive"] }
surrealdb = "1.1.1"
symphonia = { version = "0.5.3", features = ["all"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
youtube_dl = { version = "0.9.0", features = ["tokio", "reqwest"] }

array-bytes = { version = "1.5.1" }
bytes = { version= "1.1.0", features = ["serde"] }
clap = { version = "3.0.14", features = ["derive"] }
env_logger = { version = "0.9.0" }
log = { version = "0.4.17" }
rpassword = { version = "5.0" }

utils = { git = "https://github.com/Tommy-ASD/utils.git" }